added dimens and strings

--- a/app/src/main/res/layout-land/activity_add_review.xml
+++ b/app/src/main/res/layout-land/activity_add_review.xml
@@ -40,9 +40,9 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/avenir_book"
-        android:text="Write Review"
+        android:text="@string/write_review"
         android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textSize="@dimen/label_textSize"
         app:layout_constraintEnd_toStartOf="@id/midLine"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/appBar" />
@@ -51,16 +51,14 @@
         android:id="@+id/etReview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
+        android:padding="@dimen/editText_padding"
         android:gravity="top|start"
         android:textColor="@color/reviewText"
         android:inputType="textMultiLine"
         android:lines="8"
         android:background="@drawable/edit_text_border"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="@dimen/content_margin"
+        android:layout_marginTop="@dimen/label_editText_padding"
         android:maxLines="10"
         android:minLines="6"
         android:scrollbars="vertical"
@@ -72,10 +70,10 @@
         android:id="@+id/tvAddImg"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="@dimen/content_margin"
+        android:layout_marginTop="@dimen/content_margin"
         android:fontFamily="@font/avenir_book"
-        android:text="Add the photos to your review"
+        android:text="@string/add_photos"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@id/midLine"
@@ -90,7 +88,8 @@
         app:layout_constraintTop_toBottomOf="@id/tvAddImg"
         app:layout_constraintStart_toEndOf="@id/midLine"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:contentDescription="@string/add_photos" />
 
     <TextView
         android:id="@+id/submit_btn"
@@ -99,11 +98,11 @@
         android:layout_marginBottom="2dp"
         android:background="@drawable/text_background"
         android:gravity="center"
-        android:paddingVertical="20dp"
-        android:text="Submit"
+        android:paddingVertical="@dimen/button_padding"
+        android:text="@string/submit"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="18sp"
+        android:textSize="@dimen/button_textSize"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
