--- a/app/src/main/res/layout/activity_add_review.xml
+++ b/app/src/main/res/layout/activity_add_review.xml
@@ -29,12 +29,12 @@
         android:id="@+id/tvWrite"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="@dimen/content_margin"
+        android:layout_marginTop="@dimen/content_margin"
         android:fontFamily="@font/avenir_book"
-        android:text="Write Review"
+        android:text="@string/write_review"
         android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textSize="@dimen/label_textSize"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/appBar" />
 
@@ -42,16 +42,14 @@
         android:id="@+id/etReview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
+        android:padding="@dimen/editText_padding"
         android:gravity="top|start"
         android:textColor="@color/reviewText"
         android:inputType="textMultiLine"
         android:lines="8"
         android:background="@drawable/edit_text_border"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="@dimen/content_margin"
+        android:layout_marginTop="@dimen/label_editText_padding"
         android:maxLines="10"
         android:minLines="6"
         android:scrollbars="vertical"
@@ -62,12 +60,12 @@
         android:id="@+id/tvAddImg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="@dimen/content_margin"
+        android:layout_marginTop="@dimen/content_margin"
         android:fontFamily="@font/avenir_book"
-        android:text="Add the photos to your review"
+        android:text="@string/add_photos"
         android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textSize="@dimen/label_textSize"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etReview" />
 
@@ -79,8 +77,8 @@
         android:scaleType="centerCrop"
         app:layout_constraintTop_toBottomOf="@id/tvAddImg"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginStart="@dimen/content_margin"
+        android:layout_marginTop="@dimen/label_editText_padding"/>
 
     <TextView
         android:id="@+id/submit_btn"
@@ -90,10 +88,10 @@
         android:background="@drawable/text_background"
         android:gravity="center"
         android:paddingVertical="20dp"
-        android:text="Submit"
+        android:text="@string/submit"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="18sp"
+        android:textSize="@dimen/button_textSize"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
