--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -19,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:navigationIcon="@drawable/back_icon"
+            android:layout_marginHorizontal="@dimen/toolbar_marginHorizontal"
             app:menu="@menu/feedback_bar"
             app:title="Feedback"
             app:titleCentered="true"
@@ -30,12 +31,12 @@
         android:id="@+id/tvWrite"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="@dimen/content_margin"
+        android:layout_marginTop="@dimen/content_margin"
         android:fontFamily="@font/avenir_book"
-        android:text="Write your feedback"
+        android:text="@string/write_your_feedback"
         android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textSize="@dimen/label_textSize"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/appBar" />
 
@@ -43,16 +44,14 @@
         android:id="@+id/etReview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
+        android:padding="@dimen/editText_padding"
         android:gravity="top|start"
         android:textColor="@color/reviewText"
         android:inputType="textMultiLine"
         android:lines="8"
         android:background="@drawable/edit_text_border"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="@dimen/content_margin"
+        android:layout_marginTop="@dimen/label_editText_padding"
         android:maxLines="10"
         android:minLines="6"
         android:scrollbars="vertical"
@@ -66,11 +65,11 @@
         android:layout_marginBottom="2dp"
         android:background="@drawable/text_background"
         android:gravity="center"
-        android:paddingVertical="20dp"
-        android:text="Submit"
+        android:paddingVertical="@dimen/button_padding"
+        android:text="@string/submit"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="18sp"
+        android:textSize="@dimen/button_textSize"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
