--- a/app/src/main/res/layout/activity_image_details.xml
+++ b/app/src/main/res/layout/activity_image_details.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:background="#00000000"
         android:elevation="0dp"
-        android:paddingTop="20dp"
+        android:paddingTop="@dimen/appBar_topPadding"
         android:animateLayoutChanges="true"
         android:stateListAnimator="@null"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,12 +44,12 @@
             style="@style/Widget.MaterialComponents.Toolbar.Primary"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:layout_marginHorizontal="5dp"
+            android:layout_marginHorizontal="@dimen/toolbar_marginHorizontal"
             android:backgroundTint="#00000000"
             android:elevation="0dp"
             app:menu="@menu/image_details_bar"
             app:navigationIcon="@drawable/back_icon"
-            app:title="Attil"
+            app:title=""
             app:titleCentered="true" />
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -86,11 +86,11 @@
             android:id="@+id/userName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/content_margin"
             android:fontFamily="@font/avenir_book"
-            android:text="Saish Balu"
+            android:text="@string/saish_balu"
             android:textColor="@color/white"
-            android:textSize="20sp"
+            android:textSize="@dimen/name_textSize"
             app:layout_constraintBottom_toTopOf="@id/review"
             app:layout_constraintStart_toEndOf="@id/imgGuideline"
             app:layout_constraintTop_toTopOf="parent"
@@ -100,11 +100,11 @@
             android:id="@+id/review"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/content_margin"
             android:fontFamily="@font/avenir_book"
             android:text="@string/date"
             android:textColor="#ffffff"
-            android:textSize="18sp"
+            android:textSize="@dimen/label_textSize"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/imgGuideline"
