--- a/app/src/main/res/layout/activity_place_details.xml
+++ b/app/src/main/res/layout/activity_place_details.xml
@@ -17,15 +17,16 @@
         <ImageView
             android:id="@+id/placeImg"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="@dimen/placeDetails_imageHeight"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/splashscreen"/>
+            android:src="@drawable/splashscreen"
+            android:contentDescription="@string/todo" />
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="@dimen/placeDetails_imageHeight"
             android:background="@drawable/image_shadow"
             app:layout_constraintEnd_toEndOf="@id/placeImg"
             app:layout_constraintStart_toStartOf="@id/placeImg"
@@ -48,10 +49,10 @@
                 android:layout_height="?attr/actionBarSize"
                 app:menu="@menu/place_details_bar"
                 android:backgroundTint="#00000000"
-                app:title="Attil"
+                app:title=""
                 android:elevation="0dp"
                 app:titleCentered="true"
-                android:layout_marginHorizontal="5dp"
+                android:layout_marginHorizontal="@dimen/toolbar_marginHorizontal"
                 app:navigationIcon="@drawable/back_icon"
                 style="@style/Widget.MaterialComponents.Toolbar.Primary"
                 />
@@ -65,7 +66,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:gravity="center"
-            android:textSize="18sp"
+            android:textSize="@dimen/label_textSize"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@id/ratingBar"
             app:layout_constraintStart_toStartOf="@id/placeImg"
@@ -75,7 +76,7 @@
         <RatingBar
             android:id="@+id/ratingBar"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_height="@dimen/ratingBar_height"
             android:layout_marginVertical="7dp"
             android:numStars="5"
             style="@style/customRatingBar"
@@ -86,17 +87,14 @@
             android:isIndicator="true"
             app:layout_constraintEnd_toEndOf="@id/placeImg"/>
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/llMenu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/placeImg"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
-
-
+            android:layout_marginTop="@dimen/label_editText_padding">
 
             <TextView
                 android:id="@+id/ratingTv"
@@ -106,7 +104,11 @@
                 android:fontFamily="@font/avenir_book"
                 android:gravity="center"
                 app:drawableTopCompat="@drawable/rating_icon"
-                android:text="Rating"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/photos"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:text="@string/rating"/>
 
             <TextView
                 android:id="@+id/photos"
@@ -116,7 +118,11 @@
                 android:gravity="center"
                 android:fontFamily="@font/avenir_book"
                 app:drawableTopCompat="@drawable/photos_icon"
-                android:text="Photos"/>
+                app:layout_constraintStart_toEndOf="@id/ratingTv"
+                app:layout_constraintEnd_toStartOf="@id/reviews"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:text="@string/photos"/>
 
             <TextView
                 android:id="@+id/reviews"
@@ -125,11 +131,15 @@
                 android:layout_weight="1"
                 android:fontFamily="@font/avenir_book"
                 android:gravity="center"
-                android:text="Reviews"
+                android:text="@string/reviews"
+                app:layout_constraintStart_toEndOf="@id/photos"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:drawableTopCompat="@drawable/review_icon" />
 
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <View
             android:id="@+id/SplitLine_hor1"
@@ -138,8 +148,8 @@
             app:layout_constraintTop_toBottomOf="@id/llMenu"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="@dimen/content_margin"
+            android:layout_marginTop="@dimen/content_margin"
             android:background="#d3d3d3" />
 
         <TextView
@@ -147,10 +157,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/overview"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="@dimen/content_margin"
             android:textColor="@color/black"
             android:fontFamily="@font/avenir_book"
-            android:textSize="26sp"
+            android:textSize="@dimen/headingTextSize"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/SplitLine_hor1"/>
 
@@ -160,8 +170,7 @@
             android:layout_height="wrap_content"
             android:text="@string/dummy_text"
             android:fontFamily="@font/avenir_book"
-            android:paddingHorizontal="20dp"
-            android:justificationMode="inter_word"
+            android:paddingHorizontal="@dimen/content_margin"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvOverview"/>
@@ -170,7 +179,7 @@
             android:id="@+id/mapFragment"
             android:layout_width="0dp"
             android:layout_height="200dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/content_margin"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             app:layout_constraintTop_toBottomOf="@id/details"
             app:layout_constraintStart_toStartOf="parent"
@@ -189,12 +198,12 @@
             android:id="@+id/tvAddr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Daffodils Laximindra"
+            android:text="@string/dummy_address"
             android:fontFamily="@font/avenir_medium"
-            android:paddingHorizontal="10dp"
-            android:layout_marginTop="10dp"
-            android:textSize="16sp"
-            android:layout_marginStart="20dp"
+            android:paddingHorizontal="@dimen/label_editText_padding"
+            android:layout_marginTop="@dimen/label_editText_padding"
+            android:textSize="@dimen/addressTextSize"
+            android:layout_marginStart="@dimen/content_margin"
             app:layout_constraintStart_toStartOf="@id/mapFragment"
             app:layout_constraintTop_toTopOf="@id/mapFragment"/>
 
@@ -202,11 +211,11 @@
             android:id="@+id/tvLocality"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="nagar,2nd Cross udupi"
+            android:text="@string/dummy_street"
             android:fontFamily="@font/avenir_medium"
-            android:paddingHorizontal="10dp"
-            android:textSize="16sp"
-            android:layout_marginStart="20dp"
+            android:paddingHorizontal="@dimen/label_editText_padding"
+            android:textSize="@dimen/addressTextSize"
+            android:layout_marginStart="@dimen/content_margin"
             app:layout_constraintStart_toStartOf="@id/mapFragment"
             app:layout_constraintTop_toBottomOf="@id/tvAddr"/>
 
@@ -214,12 +223,12 @@
             android:id="@+id/tvphone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="No Phone number found"
+            android:text="@string/no_number"
             android:fontFamily="@font/avenir_medium"
             android:paddingHorizontal="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="20dp"
-            android:textSize="16sp"
+            android:layout_marginTop="@dimen/content_margin"
+            android:layout_marginStart="@dimen/content_margin"
+            android:textSize="@dimen/addressTextSize"
             app:layout_constraintStart_toStartOf="@id/mapFragment"
             app:layout_constraintTop_toBottomOf="@id/tvLocality"/>
 
@@ -227,12 +236,12 @@
             android:id="@+id/tvDistance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Drive : 5km"
+            android:text="@string/distance"
             android:fontFamily="@font/avenir_medium"
-            android:paddingHorizontal="10dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginStart="20dp"
-            android:textSize="16sp"
+            android:paddingHorizontal="@dimen/label_editText_padding"
+            android:layout_marginTop="@dimen/content_margin"
+            android:layout_marginStart="@dimen/content_margin"
+            android:textSize="@dimen/addressTextSize"
             app:layout_constraintStart_toStartOf="@id/mapFragment"
             app:layout_constraintTop_toBottomOf="@id/tvphone"/>
 
@@ -241,22 +250,18 @@
             android:id="@+id/addReview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="20dp"
+            android:paddingVertical="@dimen/button_padding"
             android:textAllCaps="false"
             android:background="@drawable/text_background"
             android:textColor="@color/white"
-            android:textSize="18sp"
+            android:textSize="@dimen/button_textSize"
             android:gravity="center"
             android:layout_marginBottom="2dp"
             app:layout_constraintTop_toBottomOf="@id/mapFragment"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:text="Add Review"/>
-
-
-
-
+            android:text="@string/add_review"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
