--- a/app/src/main/res/layout/favourite_item_adapter.xml
+++ b/app/src/main/res/layout/favourite_item_adapter.xml
@@ -41,13 +41,13 @@
             android:id="@+id/placeName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Central Cinemas"
+            android:text="@string/central_cinemas"
             android:textColor="@color/black"
             android:textSize="14sp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginStart="@dimen/standardMargin"
+            android:layout_marginTop="@dimen/miniMargin"
             android:fontFamily="@font/avenir_medium"
             app:layout_constraintEnd_toEndOf="@id/imgGuideline2"
             app:layout_constraintStart_toEndOf="@id/imgGuideline"
@@ -70,7 +70,7 @@
             android:id="@+id/ratings"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="1.0"
+            android:text="@string/defaultRating"
             android:textSize="12sp"
             android:background="@drawable/bg_rating"
             android:layout_marginStart="10dp"
@@ -84,7 +84,7 @@
             android:id="@+id/placeType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Movie Theatre"
+            android:text="@string/movie_theatre"
             android:textSize="12sp"
             android:ellipsize="end"
             android:maxLines="1"
@@ -103,7 +103,7 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:layout_marginStart="4dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/standardMargin"
             android:fontFamily="@font/avenir_medium"
             app:layout_constraintStart_toEndOf="@id/placeType"
             app:layout_constraintBottom_toTopOf="@id/placeAddress"/>
@@ -112,12 +112,12 @@
             android:id="@+id/distance"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="3.2km"
+            android:text="@string/defaultDistance"
             android:textSize="12sp"
             android:ellipsize="end"
             android:maxLines="1"
             android:layout_marginStart="4dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/standardMargin"
             android:fontFamily="@font/avenir_medium"
             app:layout_constraintEnd_toEndOf="@id/imgGuideline2"
             app:layout_constraintStart_toEndOf="@id/price"
@@ -131,9 +131,9 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="Tiger circle, Manipala"
+            android:text="@string/dummy_street"
             android:textSize="12sp"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="@dimen/standardMargin"
             android:fontFamily="@font/avenir_medium"
             android:layout_marginBottom="2dp"
             app:layout_constraintEnd_toEndOf="@id/imgGuideline2"
