--- a/app/src/main/res/layout/fragment_confirm_password.xml
+++ b/app/src/main/res/layout/fragment_confirm_password.xml
@@ -10,10 +10,7 @@
         android:id="@+id/linear_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_margin="@dimen/content_margin"
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,7 +23,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/Password3"
             android:text="@string/enter_password"
-            android:textSize="18sp"
+            android:textSize="@dimen/label_textSize"
             android:textColor="#b5abab"
             android:fontFamily="@font/avenir_book"
             android:gravity="center"
@@ -37,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textSize="20sp"
+            android:textSize="@dimen/edit_textSize"
             android:text=""
             android:textColor="#FFFFFF"
             android:fontFamily="@font/avenir_book"
@@ -51,18 +48,18 @@
             android:layout_height="wrap_content"
             android:id="@+id/confirm_Password2"
             android:text="@string/confirm_password"
-            android:textSize="18sp"
+            android:textSize="@dimen/label_textSize"
             android:textColor="#b5abab"
             android:fontFamily="@font/avenir_book"
             android:gravity="center"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="@dimen/standardMargin" />
 
         <EditText
             android:id="@+id/confirm_password_entry2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textSize="20sp"
+            android:textSize="@dimen/edit_textSize"
             android:text=""
             android:textColor="#FFFFFF"
             android:fontFamily="@font/avenir_book"
@@ -84,7 +81,7 @@
             android:textAllCaps="false"
             android:layout_marginTop="80dp"
             tools:ignore="MissingConstraints"
-            app:cornerRadius="20dp"
+            app:cornerRadius="@dimen/content_margin"
             android:background="@drawable/button_border"/>
     </LinearLayout>
 
