--- a/app/src/main/res/layout/place_item_adapter.xml
+++ b/app/src/main/res/layout/place_item_adapter.xml
@@ -43,11 +43,11 @@
             android:layout_height="wrap_content"
             android:text="Central Cinemas"
             android:textColor="@color/black"
-            android:textSize="14sp"
+            android:textSize="@dimen/miniText"
             android:ellipsize="end"
             android:maxLines="1"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginStart="@dimen/standardMargin"
+            android:layout_marginTop="@dimen/miniMargin"
             android:fontFamily="@font/avenir_medium"
             app:layout_constraintEnd_toEndOf="@id/imgGuideline2"
             app:layout_constraintStart_toEndOf="@id/imgGuideline"
@@ -55,7 +55,7 @@
 
         <ImageView
             android:id="@+id/fav"
-            android:layout_width="20dp"
+            android:layout_width="@dimen/content_margin"
             android:layout_height="0dp"
             android:src="@drawable/fav_unselected"
             app:layout_constraintEnd_toEndOf="parent"
@@ -67,13 +67,13 @@
 
         <ImageView
             android:id="@+id/unfav"
-            android:layout_width="20dp"
+            android:layout_width="@dimen/content_margin"
             android:layout_height="0dp"
             android:src="@drawable/fav_selected"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintDimensionRatio="1"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="@dimen/miniMargin"
             android:visibility="gone"
             app:layout_constraintStart_toEndOf="@id/imgGuideline2"
             android:contentDescription="@string/unFavourite" />
@@ -85,7 +85,7 @@
             android:text="1.0"
             android:textSize="12sp"
             android:background="@drawable/bg_rating"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="@dimen/standardMargin"
             android:layout_marginBottom="3dp"
             android:textColor="@color/white"
             app:layout_constraintStart_toEndOf="@id/imgGuideline"
@@ -96,7 +96,7 @@
             android:id="@+id/placeType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Movie Theatre"
+            android:text="@string/movie_theatre"
             android:textSize="12sp"
             android:ellipsize="end"
             android:maxLines="1"
@@ -124,7 +124,7 @@
             android:id="@+id/distance"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="3.2km"
+            android:text="@string/_3_2km"
             android:textSize="12sp"
             android:ellipsize="end"
             android:maxLines="1"
@@ -143,9 +143,9 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="Tiger circle, Manipala"
+            android:text="@string/tiger_circle_manipala"
             android:textSize="12sp"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="@dimen/standardMargin"
             android:fontFamily="@font/avenir_medium"
             android:layout_marginBottom="2dp"
             app:layout_constraintEnd_toEndOf="@id/imgGuideline2"
