--- a/app/src/main/res/layout/activity_favourites.xml
+++ b/app/src/main/res/layout/activity_favourites.xml
@@ -20,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:navigationIcon="@drawable/back_icon"
+            android:layout_marginHorizontal="@dimen/toolbar_marginHorizontal"
             app:menu="@menu/filter_bar"
             app:title="Favourites"
             app:titleCentered="true"
@@ -29,13 +30,13 @@
             android:id="@+id/search_view"
             app:searchIcon="@drawable/search_black"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginHorizontal="70dp"
+            android:layout_height="@dimen/searchBar_height"
+            android:layout_marginHorizontal="@dimen/searchBar_marginHorizontal"
             android:background="@drawable/bg_white_rounded"
             android:layout_gravity="center"
             app:iconifiedByDefault="false"
             app:queryBackground="@android:color/transparent"
-            android:layout_marginVertical="10dp"/>
+            android:layout_marginVertical="@dimen/searchBar_marginVertical"/>
 
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -44,13 +45,13 @@
         android:id="@+id/favouriteRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="10dp"
+        android:layout_marginHorizontal="@dimen/recyclerview_margin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/appBar"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="10dp" />
+        android:layout_marginBottom="@dimen/content_margin"
+        android:layout_marginTop="@dimen/content_margin" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
