--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:menu="@menu/gallery_bar"
-            app:title="Attil"
+            app:title=""
             android:elevation="0dp"
             app:titleCentered="true"
             android:layout_marginHorizontal="5dp"
@@ -34,13 +34,13 @@
         android:id="@+id/nearRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="4dp"
+        android:layout_marginHorizontal="@dimen/recyclerview_margin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/appBar"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="4dp" />
+        android:layout_marginBottom="@dimen/content_margin"
+        android:layout_marginTop="@dimen/recyclerview_margin" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
