--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -10,7 +10,7 @@
         android:id="@+id/appBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="20dp"
+        android:paddingTop="@dimen/appBar_topPadding"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -22,7 +22,7 @@
             app:title="Attil"
             android:elevation="0dp"
             app:titleCentered="true"
-            android:layout_marginHorizontal="5dp"
+            android:layout_marginHorizontal="@dimen/toolbar_marginHorizontal"
             app:navigationIcon="@drawable/back_icon"
             style="@style/Widget.MaterialComponents.Toolbar.Primary"
             />
@@ -33,8 +33,8 @@
         android:id="@+id/reviewRecyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginHorizontal="@dimen/recyclerview_margin"
+        android:layout_marginBottom="@dimen/content_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
