--- a/app/src/main/res/layout/fragment_coffee_place.xml
+++ b/app/src/main/res/layout/fragment_coffee_place.xml
@@ -9,13 +9,13 @@
         android:id="@+id/nearRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="10dp"
+        android:layout_marginHorizontal="@dimen/standardMargin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="10dp" />
+        android:layout_marginBottom="@dimen/content_margin"
+        android:layout_marginTop="@dimen/standardMargin" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
