--- a/app/src/main/res/layout/fragment_otp.xml
+++ b/app/src/main/res/layout/fragment_otp.xml
@@ -10,7 +10,7 @@
         android:id="@+id/linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
+        android:layout_marginHorizontal="@dimen/content_margin"
         android:layout_marginTop="80dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -50,7 +50,7 @@
             android:gravity="center"
             android:text="@string/enter_otp"
             android:textColor="#b5abab"
-            android:textSize="18sp" />
+            android:textSize="@dimen/label_textSize" />
 
         <EditText
             android:id="@+id/OTP_entry"
@@ -62,7 +62,7 @@
             android:inputType="number"
             android:text=""
             android:textColor="#FFFFFF"
-            android:textSize="20sp"
+            android:textSize="@dimen/edit_textSize"
             app:backgroundTint="@color/textGrey"
             tools:ignore="HardcodedText,MissingConstraints" />
 
@@ -73,9 +73,9 @@
             android:layout_marginTop="50dp"
             android:fontFamily="@font/avenir_book"
             android:gravity="center"
-            android:text="Resend OTP"
+            android:text="@string/resend_otp"
             android:textColor="#b5abab"
-            android:textSize="18sp" />
+            android:textSize="@dimen/label_textSize" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/get_in"
@@ -85,11 +85,11 @@
             android:background="@drawable/button_border"
             android:fontFamily="@font/avenir_book"
             android:gravity="center"
-            android:text="Get in !"
+            android:text="@string/get_in"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="22sp"
-            app:cornerRadius="20dp"
+            app:cornerRadius="@dimen/content_margin"
             tools:ignore="MissingConstraints" />
 
 
