--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -14,9 +14,7 @@
             android:id="@+id/linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_margin="@dimen/content_margin"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -32,9 +30,9 @@
                 android:layout_marginTop="80dp"
                 android:fontFamily="@font/avenir_book"
                 android:gravity="center"
-                android:text="Email"
+                android:text="@string/email"
                 android:textColor="#b5abab"
-                android:textSize="18sp" />
+                android:textSize="@dimen/label_textSize" />
 
 
             <EditText
@@ -47,7 +45,7 @@
                 android:inputType="textEmailAddress"
                 android:text=""
                 android:textColor="#FFFFFF"
-                android:textSize="20sp"
+                android:textSize="@dimen/edit_textSize"
                 app:backgroundTint="@color/textGrey"
                 tools:ignore="MissingConstraints" />
 
@@ -55,12 +53,12 @@
                 android:id="@+id/Password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/standardMargin"
                 android:fontFamily="@font/avenir_book"
                 android:gravity="center"
                 android:text="@string/password"
                 android:textColor="#b5abab"
-                android:textSize="18sp" />
+                android:textSize="@dimen/label_textSize" />
 
             <EditText
                 android:id="@+id/password_entry"
@@ -72,7 +70,7 @@
                 android:inputType="textPassword"
                 android:text=""
                 android:textColor="#FFFFFF"
-                android:textSize="20sp"
+                android:textSize="@dimen/edit_textSize"
                 app:backgroundTint="@color/textGrey"
                 tools:ignore="HardcodedText,MissingConstraints" />
 
@@ -81,12 +79,12 @@
                 android:id="@+id/forgotPassword"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="@dimen/content_margin"
                 android:fontFamily="@font/avenir_book"
                 android:gravity="center"
                 android:text="@string/forgot_password"
                 android:textColor="@color/textGrey"
-                android:textSize="18sp"
+                android:textSize="@dimen/label_textSize"
                 tools:ignore="MissingConstraints" />
 
             <androidx.appcompat.widget.AppCompatButton
@@ -101,7 +99,7 @@
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="22sp"
-                app:cornerRadius="20dp"
+                app:cornerRadius="@dimen/content_margin"
                 tools:ignore="MissingConstraints" />
 
 
@@ -109,12 +107,12 @@
                 android:id="@+id/create_account"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="@dimen/content_margin"
                 android:fontFamily="@font/avenir_book"
                 android:gravity="center"
                 android:text="@string/create_account"
                 android:textColor="@color/white"
-                android:textSize="20sp"
+                android:textSize="@dimen/edit_textSize"
                 tools:ignore="MissingConstraints" />
 
 
@@ -129,7 +127,7 @@
                 android:padding="5dp"
                 android:text="@string/or"
                 android:textColor="@color/white"
-                android:textSize="16sp" />
+                android:textSize="@dimen/addressTextSize" />
 
         </LinearLayout>
 
@@ -146,7 +144,7 @@
             android:id="@+id/img_facebook"
             android:src="@drawable/facebook_btn"
             android:contentDescription="@string/facebook_img"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/content_margin"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/imgGuideline"
@@ -158,7 +156,7 @@
             android:id="@+id/img_google"
             android:src="@drawable/google_btn"
             android:contentDescription="@string/google_img"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/content_margin"
             app:layout_constraintStart_toEndOf="@+id/imgGuideline"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
