--- a/app/src/main/res/layout/fragment_top_pick.xml
+++ b/app/src/main/res/layout/fragment_top_pick.xml
@@ -9,7 +9,7 @@
         android:id="@+id/nearRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="10dp"
+        android:layout_marginHorizontal="@dimen/recyclerview_margin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
