--- a/app/src/main/res/layout/review_adapter.xml
+++ b/app/src/main/res/layout/review_adapter.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
+    android:layout_marginTop="@dimen/standardMargin"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingVertical="20dp">
+        android:paddingVertical="@dimen/content_margin">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/imgGuideline"
@@ -48,9 +48,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:fontFamily="@font/avenir_book"
-            android:text="Saish Balu"
+            android:text="@string/saish_balu"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="@dimen/edit_textSize"
             app:layout_constraintBottom_toTopOf="@id/review"
             app:layout_constraintStart_toEndOf="@id/imgGuideline"
             app:layout_constraintVertical_chainStyle="packed"
@@ -61,9 +61,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:text="Must try crab soup and oysters cooked in ghee!!"
+            android:text="@string/dummy_review"
             android:fontFamily="@font/avenir_book"
-            android:textSize="14sp"
+            android:textSize="@dimen/miniText"
             android:textColor="#7c7c7f"
             app:layout_constraintStart_toEndOf="@id/imgGuideline"
             app:layout_constraintEnd_toStartOf="@id/imgGuideline2"
@@ -76,9 +76,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:fontFamily="@font/avenir_book"
-            android:text="June 24, 2015"
+            android:text="@string/dummy_date"
             android:textColor="#b8b8b8"
-            android:textSize="14sp"
+            android:textSize="@dimen/miniText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/imgGuideline2"
             app:layout_constraintTop_toTopOf="@id/userName" />
